--- a/assets/css/site/_site.scss
+++ b/assets/css/site/_site.scss
@@ -68,6 +68,9 @@
     // 1.1.2. Burger Menu
     @import	"_1.1.2-object--nav"; 
 
+    // 1.1.3. Burger Menu
+    @import	"_1.1.3-object--socialmedia"; 
+
     // 1.2. CARDS
     @import	"_1.2-object--cards";
 
@@ -124,7 +127,7 @@
     @import	"_2.7-section--contact";
 
     // 2.8. FRONT
-    @import	"_2.8-section--front";
+    @import	"_2.8-section--home";
 
 
 // 2. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
