--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1777,6 +1777,67 @@ a {
   .mobi-nav {
     display: none; } }
 
+.social-media {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+  margin: 0; }
+  .social-media li {
+    list-style-type: none;
+    display: inline-block; }
+    .social-media li a {
+      display: block; }
+      .social-media li a .icon {
+        margin: 0;
+        padding: 0;
+        background: #333333; }
+        .social-media li a .icon svg {
+          width: 50px;
+          height: 50px; }
+          .social-media li a .icon svg polygon,
+          .social-media li a .icon svg circle,
+          .social-media li a .icon svg rect,
+          .social-media li a .icon svg path {
+            fill: #EEEEEE; }
+      .social-media li a:hover .icon {
+        background: #333333; }
+      .social-media li a img {
+        width: 30px;
+        height: 30px; }
+
+.tweets {
+  list-style-type: none;
+  margin: 0;
+  padding: 5px 0;
+  background: #777777; }
+  .tweets li {
+    list-style-type: none;
+    font-size: 0.75em;
+    margin: 5px 0;
+    padding: 10px 5px;
+    padding-left: 20px;
+    line-height: normal;
+    color: #555555;
+    background: #DDDDDD;
+    position: relative; }
+    .tweets li:after {
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+              transform: translateY(-50%);
+      width: 25px;
+      height: 25px;
+      content: '';
+      left: -15px;
+      border: 3px solid #DDDDDD;
+      background: url("../images/site/icon-twitter.svg") center center no-repeat #fff;
+      background-size: 100% 100%;
+      border-radius: 100%; }
+    .tweets li a {
+      display: block;
+      color: #333333; }
+
 .card {
   position: relative;
   overflow: hidden; }
@@ -2384,16 +2445,19 @@ a {
           box-shadow: 0 0 2px #F0EFE7; }
 
 @media only screen and (max-width: 320px) {
-  .jcarousel-wrapper.home-carousel {
-    display: none; } }
+  .jcarousel-wrapper.home-carousel .jcarousel ul li img {
+    width: auto;
+    height: 100%; } }
 
 @media only screen and (min-width: 321px) and (max-width: 480px) {
-  .jcarousel-wrapper.home-carousel {
-    display: none; } }
+  .jcarousel-wrapper.home-carousel .jcarousel ul li img {
+    width: auto;
+    height: 100%; } }
 
 @media only screen and (min-width: 481px) and (max-width: 1023px) {
-  .jcarousel-wrapper.home-carousel {
-    display: none; } }
+  .jcarousel-wrapper.home-carousel .jcarousel ul li img {
+    width: auto;
+    height: 100%; } }
 
 .modal-open {
   overflow: hidden; }
@@ -2923,7 +2987,7 @@ a {
     overflow: hidden;
     margin-bottom: 20px; }
     #section-team .team-list .team-item .pic {
-      width: 90%;
+      width: 50%;
       margin: 0 auto;
       border-radius: 100%;
       margin-bottom: 10px; }
@@ -2945,7 +3009,7 @@ a {
           -ms-transform: translateX(-50%);
               transform: translateX(-50%);
       left: 50%;
-      width: 90%;
+      width: 50%;
       border-radius: 100%; }
   #section-team .team-carousel {
     width: 60%;
@@ -3035,97 +3099,60 @@ a {
   text-align: center;
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
-  bottom: 0; }
-  .section-home .wrap-content {
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%); }
-  .section-home .section-header {
-    padding: 0 0 20px 0; }
-    .section-home .section-header h2 {
-      line-height: normal; }
-    .section-home .section-header .bob-slogan {
-      text-transform: uppercase;
-      padding: 0;
-      font-size: 1.6em;
-      line-height: normal;
-      margin: 40px 0 10px; }
-  .section-home .front-requestLink {
-    width: 250px;
-    border: 2px solid #FFF;
-    padding: 15px 5px;
-    margin: 50px auto;
-    font-size: 0.85em;
-    color: #FFF; }
-    .section-home .front-requestLink a {
-      color: #000;
-      text-decoration: none; }
-  .section-home .figure-downArrow {
-    clear: both;
-    width: 100%;
-    margin: 0 0 40px 0; }
-    .section-home .figure-downArrow img {
-      display: inline-block; }
-  .section-home .figure-logo {
-    width: 225px;
-    margin: 0 auto; }
-    .section-home .figure-logo img {
-      width: 100%; }
+  bottom: 0;
+  left: 0; }
+  .section-home .home-carousel ul li {
+    position: relative; }
+    .section-home .home-carousel ul li .carousel-pic {
+      position: relative;
+      z-index: 0; }
+    .section-home .home-carousel ul li .carousel-text {
+      position: absolute;
+      z-index: 10; }
+      .section-home .home-carousel ul li .carousel-text .text {
+        text-shadow: 0 0 10px #000;
+        line-height: normal;
+        margin: 0; }
+      .section-home .home-carousel ul li .carousel-text h3 {
+        margin-bottom: 20px;
+        font-size: 5vh;
+        color: #fff; }
+      .section-home .home-carousel ul li .carousel-text h5 {
+        font-size: 3vh;
+        color: #fff; }
 
 @media only screen and (max-width: 320px) {
   .section-home {
-    padding-top: 50px;
+    padding-top: 52px;
     background-size: auto 100%;
     background-position: center center; }
-    .section-home .wrap-content {
-      top: 40%; }
-    .section-home h1 {
-      line-height: normal; }
     .section-home .section-header {
-      padding: 0 0 0px 0; }
-    .section-home .front-requestLink {
-      display: none; }
-    .section-home .figure-downArrow {
-      display: none; }
-    .section-home .figure-logo {
-      width: 150px;
-      margin: 0 auto; }
-      .section-home .figure-logo img {
-        width: 100%; } }
+      padding: 0 0 0px 0; } }
 
 @media only screen and (min-width: 321px) and (max-width: 480px) {
   .section-home {
-    padding-top: 50px;
+    padding-top: 52px;
     background-size: auto 100%;
     background-position: center center; }
-    .section-home .wrap-content {
-      top: 40%; }
-    .section-home h1 {
-      line-height: normal; }
     .section-home .section-header {
-      padding: 0 0 0px 0; }
-    .section-home .front-requestLink {
-      display: none; }
-    .section-home .figure-downArrow {
-      display: none; }
-    .section-home .figure-logo {
-      width: 150px;
-      margin: 0 auto; }
-      .section-home .figure-logo img {
-        width: 100%; } }
+      padding: 0 0 0px 0; } }
 
 @media only screen and (min-width: 481px) and (max-width: 1023px) {
   .section-home {
-    padding-top: 50px;
+    padding-top: 170px;
     background-size: auto 100%;
-    background-position: center center; } }
+    background-position: center center; }
+    .section-home .section-header {
+      padding: 0 0 0px 0; } }
 
-.section-home {
-  padding-top: 170px; }
+@media only screen and (min-width: 1024px) {
+  .section-home {
+    padding-top: 170px; } }
+
+@media only screen and (min-width: 1200px) {
+  .section-home {
+    padding-top: 170px; } }
 
 @media only screen and (min-width: 321px) and (max-width: 480px) {
   .container {
