--- a/assets/css/site/_1.1.2-object--nav.scss
+++ b/assets/css/site/_1.1.2-object--nav.scss
@@ -21,6 +21,7 @@
     transform: translateY(0%); 
     transition: 0.3s; 
     z-index: 10;
+    background: $kd-grey90;
     
     ul {
         
@@ -32,7 +33,11 @@
         .textLink {
             
             list-style-type: none;
-            padding: 0;
+            display: block;
+            padding: $baseline 0;
+            border-bottom: 1px solid $kd-mauve;
+            color: $white;
+            text-align: center;
             
             a { 
                 display: block; 
