--- a/assets/css/site/_1.4-object--carousel.scss
+++ b/assets/css/site/_1.4-object--carousel.scss
@@ -31,7 +31,7 @@
 .jcarousel li {
     width: 200px;
     float: left;
-    border: 1px solid #fff;
+    border: 0;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
