--- a/assets/css/site/_2.4-section--about.scss
+++ b/assets/css/site/_2.4-section--about.scss
@@ -11,7 +11,7 @@
 #section-our-vision {
 
     background: $kd-royal;
-    padding: 0 0 40px 0;
+    padding: $baseline-medium 0;
     color: $ia-grey20;
 
     //B.1.1. page header
@@ -55,21 +55,7 @@
         
     }
 
-
-.figure-teamBottom {
-    
-    background: url(../images/site/staff-footer.png) top center no-repeat;
-
-    // RESPONSIVE
-    padding: 30px 0;
-    margin: 60px 0 -60px 0;
-    // RESPONSIVE
-
-}
-
 // B.1. End
-
-}
 
 // A.2. END -----------------------------------------------------------------------------------------------------------
 
@@ -80,7 +66,6 @@
 @include media-query(feature) {
 
     // A.1.1 ABOUT US
-    #section-our-vision {	
 
         // RESPONSIVE
         padding: 0 0 40px 0;
@@ -94,6 +79,8 @@
         //B.1.1. page header
 
         .section-header {
+            
+            padding-top: $baseline-large;
 
             h2 {
                 // RESPONSIVE
@@ -101,7 +88,6 @@
                 // RESPONSIVE
             }				
         }
-    }
 }
 
 // B. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -110,7 +96,6 @@
 
 @include media-query(mobile) {
 
-    #section-our-vision {	
 
         // RESPONSIVE
         padding: 0 0 40px 0;
@@ -124,6 +109,8 @@
         //B.1.1. page header
 
         .section-header {
+            
+            padding-top: $baseline-medium;
 
             h2 {
                 // RESPONSIVE
@@ -131,7 +118,6 @@
                 // RESPONSIVE
             }				
         }
-    }
 }
 
 // C. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -142,12 +128,10 @@
 
     // A.1.1 ABOUT US
 
-    #section-our-vision {
 
         .container { margin: 0 $baseline-small; }
         .figure__our-vision { margin-bottom: $baseline-small; }
 
-    }
 
     // A.1.1. END
     
@@ -161,7 +145,6 @@
 
     // A.1.1 ABOUT US
 
-    #section-our-vision {
 
         .container { margin: 0 auto; }   
     
@@ -172,7 +155,6 @@
             p { font-size: $small; }
 
         }
-    }
 
     // A.1.1. END
     
@@ -186,8 +168,6 @@
 
     // A.1.1 ABOUT US
 
-    #section-our-vision {
-
         .container { margin: 0 auto; }
     
         //B.1.3. Our Vision Text
@@ -197,7 +177,6 @@
             p { font-size: $normal; }
 
         }
-    }
 
     // A.1.1. END
     
@@ -205,4 +184,6 @@
 
 // E. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+}    
+    
 // END OF FILE ########################################################################################################
