--- a/assets/css/site/_2.3-section--footend.scss
+++ b/assets/css/site/_2.3-section--footend.scss
@@ -26,8 +26,18 @@
     
     .form {
         
-        .logo { width: 25%; .form-logo { width: 100%; height: auto; }}
-        .contact-form { width: 75%; }
+        .logo { 
+            position: relative;
+            @extend .feature--one-whole;
+            @extend .mobile--one-whole;
+            
+            .form-logo { width: 100%; height: auto; }
+        }
+        
+        .contact-form {
+            @extend .feature--one-whole;
+            @extend .mobile--one-whole;
+        }
         
         h3 { font-size: $large; padding: 0 $baseline; color: $kd-royal; }}
 
@@ -66,6 +76,10 @@
         
         .email-us { display: none; }
         
+        // A.1.2. CONTACT FORM
+
+        .form { .logo { .form-logo { width: 50%; margin: 0 auto;}}}
+        
         // A.1.3. CAPTAIN FORM
 
         .wpcf7-form {
@@ -92,6 +106,10 @@
         // A.1.1. Email Us
         
         .email-us { display: none; }
+        
+        // A.1.2. CONTACT FORM
+
+        .form { .logo { .form-logo { width: 50%; margin: 0 auto;}}}
         
         // A.1.1. CAPTAIN FORM
 
